[refactor] code formatting, delete unnecessary method